Revision History for Perl module Math::Expression::Evaluator

0.1.2 Mon Jul 14 11:45:23 CEST 2008
- fixed timestamps, they are all in the past now 

0.1.1 Wed Jun 18 22:28:48 CEST 2008
- require perl version 5.006001, not 5.6.1. Perl 5.5something doesn't
  understand the latter.

0.1.0 Sun Jun  8 12:30:06 CEST 2008
- ast_size is now a public method
- added two examples
- increased submajor version number to 1 to reflect increasing maturity
- don't hide modules from PAUSE indexer, cpants complains about missing
  dependencies otherwie

0.0.6 Thu Apr  3 09:09:37 CEST 2008
- added modulo operator %
- documented variable handling of compiled functions
- more test cases for associativity, builtins and variables

0.0.5 Mon Mar 31 13:02:29 CEST 2008
- Added ability to compile expression to a perl function
- Many more tests, checked with Devel::Cover
- Added "See Also" list to MEE documentation
- Lexer: track .pos in tokens
- Parser: Annotate error messages with position
- Documentation in Lexer.pm: more details on regex matching
- non-recursive 'variables' method
- more parse tree documentation
- removed many trailing spaces in source code
- simplify AST while parsing, not in a separate step

0.0.4 Wed Sep 19 17:51:01 CEST 2007
- add variables() method
- more documentation on optimization
- added another optimization method (flattening)
- test that prove optimize() actually does something

0.0.3 Tue Sep 18 08:21:21 CEST 2007
- Dropped 'use Regexp::Common' 

0.0.2 Mon Sep 17 13:34:27 CEST 2007
- Splitted MEE::Util and MEE::Parser from main module
- Added optimize() and the underlying MEE::Optimizer
- Most tests now run once with optimize() and once without
- Added LICENSE section to ME::Evaluator
- Dropped Regexp::Common dependency
- Added this Changes file

0.0.1 Mon Sep 10 13:13:13 CEST 2007
- Initial release